Fix build with Qtvk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ add_definitions(${QT_DEFINITIONS})
 find_package(Phonon REQUIRED)
 include_directories(${PHONON_INCLUDES})
 
+find_package(Qtvk REQUIRED)
+include_directories(${Qtvk_INCLUDES})
+
 qt4_wrap_cpp(qvplayer_MOC_SOURCES ${qvplayer_HEADERS})
 qt4_wrap_ui(qvplayer_UI_SOURCES ${qvplayer_FORMS})
 qt4_add_resources(qvplayer_RESOURCES ${qvplayer_QRC})
@@ -31,7 +34,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(qvplayer ${qvplayer_SOURCES} ${qvplayer_MOC_SOURCES} ${qvplayer_UI_SOURCES}
                         ${qvplayer_HEADERS} ${qvplayer_RESOURCES})
-target_link_libraries(qvplayer ${QT_LIBRARIES} qtvk ${PHONON_LIBRARY})
+target_link_libraries(qvplayer ${QT_LIBRARIES} ${Qtvk_LIBRARIES} ${PHONON_LIBRARY})
 
 install(TARGETS qvplayer 
         RUNTIME DESTINATION bin)
