--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,12 @@ set(qvplayer_FORMS
 set(qvplayer_QRC
     qrc/main.qrc)
 
+set(qvplayer_TRANSLATIONS
+    ts/de.ts
+    ts/en.ts
+    ts/ru.ts
+    ts/ua.ts)    
+    
 set(QT_USE_QTWEBKIT TRUE)
 set(QT_USE_PHONON TRUE)
 find_package(Qt4 REQUIRED)
@@ -34,6 +40,7 @@ link_directories(${Qtvk_LIBRARY_DIR})
 qt4_wrap_cpp(qvplayer_MOC_SOURCES ${qvplayer_HEADERS})
 qt4_wrap_ui(qvplayer_UI_SOURCES ${qvplayer_FORMS})
 qt4_add_resources(qvplayer_RESOURCES ${qvplayer_QRC})
+qt4_add_translation(qvplayer_QM ${qvplayer_TRANSLATIONS})
 
 if(WIN32 AND NOT CYGWIN)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
@@ -42,7 +49,7 @@ endif()
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(qvplayer ${qvplayer_SOURCES} ${qvplayer_MOC_SOURCES} ${qvplayer_UI_SOURCES}
-                        ${qvplayer_HEADERS} ${qvplayer_RESOURCES})
+                        ${qvplayer_HEADERS} ${qvplayer_RESOURCES} ${qvplayer_QM})
 target_link_libraries(qvplayer ${QT_LIBRARIES} ${Qtvk_LIBRARIES} ${PHONON_LIBRARY})
 
 install(TARGETS qvplayer 
